--- a/ui5.yaml
+++ b/ui5.yaml
@@ -3,5 +3,9 @@ metadata:
   name: sap-ui5-walkthrough
 type: application
 framework:
-  name: SAPUI5
+  name: OpenUI5
   version: "1.125.0"
+  libraries:
+    - name: sap.m
+    - name: sap.ui.core
+    - name: themelib_sap_horizon
